// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueFilingButtonTest onclick: invalid settings, %s 1`] = `
<DocumentFragment>
  <mock-button
    appearance="primary"
  >
    <mock-bug20filled />
    <div
      class="ms-Button-label"
    >
      File issue
    </div>
  </mock-button>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    isopen="true"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;

exports[`IssueFilingButtonTest onclick: valid settings, file bug and set %s to false 1`] = `
<DocumentFragment>
  <mock-button
    appearance="primary"
  >
    <mock-bug20filled />
    <div
      class="ms-Button-label"
    >
      File issue
    </div>
  </mock-button>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    isopen="false"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;

exports[`IssueFilingButtonTest render: isSettingsValid: false 1`] = `
<DocumentFragment>
  <mock-button
    appearance="primary"
  >
    <mock-bug20filled />
    <div
      class="ms-Button-label"
    >
      File issue
    </div>
  </mock-button>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    isopen="false"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;

exports[`IssueFilingButtonTest render: isSettingsValid: true 1`] = `
<DocumentFragment>
  <mock-button
    appearance="primary"
  >
    <mock-bug20filled />
    <div
      class="ms-Button-label"
    >
      File issue
    </div>
  </mock-button>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    isopen="false"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;
